--- a/app/src/main/res/layout/view_bathing_sites.xml
+++ b/app/src/main/res/layout/view_bathing_sites.xml
@@ -19,6 +19,7 @@
         android:id="@+id/bathing_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="@dimen/bathing_sites_count"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bath_image"
