--- a/app/src/main/res/layout/fragment_new_bathing_site.xml
+++ b/app/src/main/res/layout/fragment_new_bathing_site.xml
@@ -55,7 +55,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/form_latitude" />
+                    android:hint="@string/form_latitude"
+                    android:inputType="numberDecimal|numberSigned"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -65,7 +66,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/form_longitude" />
+                    android:hint="@string/form_longitude"
+                    android:inputType="numberDecimal|numberSigned"/>
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -99,7 +101,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/form_water_temp" />
+                    android:hint="@string/form_water_temp"
+                    android:inputType="numberDecimal|numberSigned"/>
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -109,7 +112,8 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:hint="@string/form_date_for_temp" />
+                    android:hint="@string/form_date_for_temp"
+                    android:inputType="date"/>
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
