--- a/app/src/main/res/menu/menu_new_bathing_site.xml
+++ b/app/src/main/res/menu/menu_new_bathing_site.xml
@@ -3,11 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/store_numbers_settings"
+    <item android:id="@+id/menu_item_clear"
         android:title="@string/menu_clear"
         app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/download_voices_link"
+    <item android:id="@+id/menu_item_save"
         android:title="@string/menu_save"
         app:showAsAction="ifRoom"/>
 </menu>
