--- a/app/src/main/res/menu/menu_new_bathing_site.xml
+++ b/app/src/main/res/menu/menu_new_bathing_site.xml
@@ -10,4 +10,12 @@
     <item android:id="@+id/menu_item_save"
         android:title="@string/menu_save"
         app:showAsAction="ifRoom"/>
+
+    <item android:id="@+id/menu_item_weather"
+        android:title="@string/menu_weather"
+        app:showAsAction="never"/>
+
+    <item android:id="@+id/menu_item_settings"
+        android:title="@string/menu_settings"
+        app:showAsAction="never"/>
 </menu>
