--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,5 +5,6 @@
 
     <item android:id="@+id/bathing_site_settings"
         android:title="@string/menu_settings"
+        android:onClick="startSettingsActivity"
         app:showAsAction="never"/>
 </menu>
