--- a/app/src/main/res/menu/menu_new_bathing_site.xml
+++ b/app/src/main/res/menu/menu_new_bathing_site.xml
@@ -17,5 +17,6 @@
 
     <item android:id="@+id/menu_item_settings"
         android:title="@string/menu_settings"
+        android:onClick="startSettingsActivity"
         app:showAsAction="never"/>
 </menu>
