--- a/app/src/main/res/menu/menu_new_bathing_site.xml
+++ b/app/src/main/res/menu/menu_new_bathing_site.xml
@@ -13,6 +13,7 @@
 
     <item android:id="@+id/menu_item_weather"
         android:title="@string/menu_weather"
+        android:onClick="getCurrentWeather"
         app:showAsAction="never"/>
 
     <item android:id="@+id/menu_item_settings"
