--- a/app/src/main/res/layout/dialog_current_weather_layout.xml
+++ b/app/src/main/res/layout/dialog_current_weather_layout.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     android:id="@+id/dialog_current_weather"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:visibility="invisible"
-    android:gravity="center">
+    android:orientation="vertical">
     <TextView
         android:id="@+id/current_weather_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_current_weather"/>
-
+    <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/current_weather_image"
+            android:layout_width="@dimen/weather_image_size"
+            android:layout_height="@dimen/weather_image_size"
+            android:contentDescription="@string/description_weather_image" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/current_weather_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+            <TextView
+                android:id="@+id/current_weather_temp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
