--- a/app/src/main/res/layout/fragment_get_weather_dialog.xml
+++ b/app/src/main/res/layout/fragment_get_weather_dialog.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_get_weather"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:context=".GetWeatherDialog">
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -18,4 +20,4 @@
         android:text="@string/getting_weather"
         android:layout_margin="10dp" />
 
-</LinearLayout>
+</FrameLayout>
