--- a/app/src/main/res/layout/fragment_show_weather_dialog.xml
+++ b/app/src/main/res/layout/fragment_show_weather_dialog.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/dialog_current_weather"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ShowWeatherDialog">
+
     <TextView
         android:id="@+id/current_weather_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_current_weather"/>
     <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/current_weather_image"
             android:layout_width="@dimen/weather_image_size"
@@ -30,4 +31,5 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+
+</FrameLayout>
