--- a/app/src/main/res/layout/fragment_get_weather_dialog.xml
+++ b/app/src/main/res/layout/fragment_get_weather_dialog.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_get_weather"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:padding="@dimen/dialog_padding"
     tools:context=".GetWeatherDialog">
 
     <ProgressBar
@@ -20,4 +21,4 @@
         android:text="@string/getting_weather"
         android:layout_margin="10dp" />
 
-</FrameLayout>
+</LinearLayout>
