--- a/app/src/main/res/layout/fragment_show_weather_dialog.xml
+++ b/app/src/main/res/layout/fragment_show_weather_dialog.xml
@@ -1,18 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/dialog_padding"
     tools:context=".ShowWeatherDialog">
-
     <TextView
         android:id="@+id/current_weather_title"
+        style="@style/DialogTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/title_current_weather"/>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
         <ImageView
             android:id="@+id/current_weather_image"
             android:layout_width="@dimen/weather_image_size"
@@ -20,7 +23,8 @@
             android:contentDescription="@string/description_weather_image" />
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
             <TextView
                 android:id="@+id/current_weather_description"
                 android:layout_width="wrap_content"
@@ -31,5 +35,4 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
