--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,6 +8,8 @@
     <dimen name="form_grade_margin_start">2dp</dimen>
     <dimen name="form_grade_margin_top">10dp</dimen>
 
+    <!-- Dialog dimensions -->
+    <dimen name="dialog_padding">20sp</dimen>
     <!-- Current weather dialog -->
-    <dimen name="weather_image_size">100dp</dimen>
+    <dimen name="weather_image_size">80dp</dimen>
 </resources>
