Added the download activity showing a webview of download links.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,4 +7,9 @@
         android:title="@string/menu_settings"
         android:onClick="startSettingsActivity"
         app:showAsAction="never"/>
+
+    <item android:id="@+id/bathing_site_download"
+        android:title="@string/menu_download"
+        android:onClick="startDownloadActivity"
+        app:showAsAction="never" />
 </menu>
