--- a/app/src/main/res/layout/fragment_downloading_dialog.xml
+++ b/app/src/main/res/layout/fragment_downloading_dialog.xml
@@ -7,7 +7,7 @@
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="@dimen/dialog_padding"
-    tools:context=".GetWeatherDialog">
+    tools:context=".DownloadingDialog">
 
     <ProgressBar
         android:layout_width="wrap_content"
@@ -15,10 +15,9 @@
         android:layout_margin="10dp" />
 
     <TextView
-        android:id="@+id/download_title"
+        android:id="@+id/downloading_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/getting_weather"
         android:layout_margin="10dp" />
 
 </LinearLayout>
