--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -12,4 +12,9 @@
         android:title="@string/menu_download"
         android:onClick="startDownloadActivity"
         app:showAsAction="never" />
+
+    <item android:id="@+id/bathing_site_map"
+        android:title="@string/menu_map"
+        android:onClick="startMapActivity"
+        app:showAsAction="never" />
 </menu>
